Restore MUSIC.html to original state
Restored the original content of MUSIC.html after accidental removal.

--- a/MUSIC.html
+++ b/MUSIC.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!-- This is a single-line comment -->
+\<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -215,3 +216,4 @@ input[type=range]::-webkit-slider-thumb{
 
 </body>
 </html>
+
