--- a/MUSIC.html
+++ b/MUSIC.html
@@ -1,4 +1,4 @@
-<!-- This is a single-line comment -->
+<!-- This is a single-line comment---- -->
 \<!DOCTYPE html>
 <html lang="en">
 <head>
@@ -216,4 +216,5 @@ input[type=range]::-webkit-slider-thumb{
 
 </body>
 </html>
+
 
